Modified HTML/JS and add new CSS styles

--- a/index.html
+++ b/index.html
@@ -3,10 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <script src="script.js" ></script>
-    <h2>Game will be played in console</h2>
+    <div class="container">
+      <h1>Rock Paper Scissors</h1>
+
+      <div class="choices">
+        <button id="rock">🪨</button>
+        <button id="paper">🖐️</button>
+        <button id="scissors">✌️</button>
+      </div>
+
+      <div class="results">
+        <p id="round-result">Choose a weapon to start!</p>
+        <p>Player Score: <span id="humen-score">0</span></p>
+        <p>Computer Score: <span id="computer-score">0</span></p>
+        <h2 id="winner-announcement"></h2>
+      </div>
+      <button id="reset">Play Again</button>
+    </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
