--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <button id="reset">Play Again</button>
     </div>
 
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
 
   </body>
 </html>
